--- a/upload/admin/view/template/marketing/affiliate.twig
+++ b/upload/admin/view/template/marketing/affiliate.twig
@@ -11,8 +11,10 @@
           <ul class="dropdown-menu">
             <li><button type="submit" form="form-affiliate" formaction="{{ csv }}" class="dropdown-item"><i class="fa-solid fa-file-csv"></i> {{ text_csv }}</button></li>
             <li><button type="submit" form="form-affiliate" formaction="{{ complete }}" class="dropdown-item"><i class="fa-solid fa-credit-card"></i> {{ text_complete }}</button></li>
+            <li><hr class="dropdown-divider"></li>
             <li><button type="submit" form="form-affiliate" formaction="{{ enable }}" class="dropdown-item"><i class="fa-solid fa-toggle-on text-success"></i> {{ text_enable }}</button></li>
             <li><button type="submit" form="form-affiliate" formaction="{{ disable }}" class="dropdown-item"><i class="fa-solid fa-toggle-off text-danger"></i> {{ text_disable }}</button></li>
+            <li><hr class="dropdown-divider"></li>
             <li><button type="submit" form="form-affiliate" formaction="{{ delete }}" onclick="return confirm('{{ text_confirm }}');" class="dropdown-item"><i class="fa-regular fa-trash-can text-danger"></i> {{ text_delete }}</button></li>
           </ul>
         </div>
