--- a/upload/extension/opencart/catalog/view/template/module/filter.twig
+++ b/upload/extension/opencart/catalog/view/template/module/filter.twig
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
   <div class="card-header"><i class="fa-solid fa-filter"></i> {{ heading_title }}</div>
   <div class="list-group list-group-flush">
     {% for filter_group in filter_groups %}
@@ -15,7 +15,7 @@
       </div>
     {% endfor %}
   </div>
-  <div class="card-footer text-right">
+  <div class="card-footer text-end">
     <button type="button" id="button-filter" class="btn btn-primary"><i class="fa-solid fa-filter"></i> {{ button_filter }}</button>
   </div>
 </div>
