--- a/upload/admin/view/template/tool/upgrade.twig
+++ b/upload/admin/view/template/tool/upgrade.twig
@@ -69,40 +69,56 @@ $('#button-upgrade').on('click', function() {
     if (confirm('{{ text_confirm }}')) {
         $('#progress').html('{{ text_download|escape('js') }}');
 
-        $.ajax({
-            url: 'index.php?route=tool/upgrade.download&user_token={{ user_token }}&version={{ latest_version }}',
-            dataType: 'json',
-            beforeSend: function() {
-                $(element).button('loading');
-            },
-            complete: function() {
-                $(element).button('reset');
-            },
-            success: function(json) {
-                console.log(json);
+        var next = 'index.php?route=tool/upgrade.download&user_token={{ user_token }}&version={{ latest_version }}';
 
-                $('#input-upgrade').removeClass('is-valid is-invalid');
+        var upgrade = function() {
+            return $.ajax({
+                url: next,
+                dataType: 'json',
+                beforeSend: function() {
+                    $(element).button('loading');
+                },
+                complete: function() {
+                    $(element).button('reset');
+                },
+                success: function(json) {
+                    console.log(json);
 
-                if (json['error']) {
-                    $('#input-upgrade').val(json['error']);
-                    $('#input-upgrade').addClass('is-invalid');
+                    $('#input-upgrade').removeClass('is-valid is-invalid');
+
+                    if (json['error']) {
+                        $('#input-upgrade').val(json['error']);
+                        $('#input-upgrade').addClass('is-invalid');
+
+                        $(element).button('reset');
+                    }
+
+                    if (json['text']) {
+                        $('#input-upgrade').val(json['text']);
+                    }
+
+                    if (json['success']) {
+                        $('#input-upgrade').val(json['success']);
+                        $('#input-upgrade').addClass('is-valid');
+
+                        $(element).button('reset');
+                    }
+
+                    if (json['next']) {
+                        next = json['next'];
+
+                        chain.attach(upgrade);
+                    }
+                },
+                error: function(xhr, ajaxOptions, thrownError) {
+                    console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
 
                     $(element).button('reset');
                 }
+            });
+        };
 
-                if (json['success']) {
-                    $('#input-upgrade').val(json['success']);
-
-                    $('#input-upgrade').val(json['success']);
-                    $('#input-upgrade').addClass('is-valid');
-                }
-            },
-            error: function(xhr, ajaxOptions, thrownError) {
-                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-
-                $(element).button('reset');
-            }
-        });
+        chain.attach(upgrade);
     }
 });
 //--></script>
