--- a/upload/admin/view/template/common/dashboard.twig
+++ b/upload/admin/view/template/common/dashboard.twig
@@ -32,28 +32,5 @@
   </div>
   {{ security }}
 </div>
-<script type="text/javascript"><!--
-$('#button-setting').on('click', function() {
-    $.ajax({
-        url: 'index.php?route=common/developer&user_token={{ user_token }}',
-        dataType: 'html',
-        beforeSend: function() {
-            $('#button-setting').button('loading');
-        },
-        complete: function() {
-            $('#button-setting').button('reset');
-        },
-        success: function(html) {
-            $('#modal-developer').remove();
-
-            $('body').prepend(html);
-
-            $('#modal-developer').modal('show');
-        },
-        error: function(xhr, ajaxOptions, thrownError) {
-            console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-        }
-    });
-});
-//--></script>
+<script src="view/javascript/dashboard.js" type="text/javascript"></script>
 {{ footer }}
