--- a/upload/admin/view/template/customer/custom_field.twig
+++ b/upload/admin/view/template/customer/custom_field.twig
@@ -29,11 +29,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-//--></script>
+<script src="view/javascript/custom_field.js" type="text/javascript"></script>
 {{ footer }}
