--- a/upload/admin/view/template/user/user.twig
+++ b/upload/admin/view/template/user/user.twig
@@ -77,81 +77,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-
-$('#form-filter').on('submit', function(e) {
-    e.preventDefault();
-
-    let url = $(this).serialize();
-
-    window.history.pushState({}, null, 'index.php?route=user/user&user_token={{ user_token }}&' + url);
-
-    $('#list').load('index.php?route=user/user.list&user_token={{ user_token }}&' + url);
-});
-
-$('#input-username').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=user/user.autocomplete&user_token={{ user_token }}&filter_username=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['username'],
-                        value: item['user_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-username').val(decodeHTMLEntities(item['label']));
-    }
-});
-
-$('#input-name').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=user/user.autocomplete&user_token={{ user_token }}&filter_name=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['name'],
-                        value: item['user_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-name').val(decodeHTMLEntities(item['label']));
-    }
-});
-
-$('#input-email').autocomplete({
-    'source': function(request, response) {
-        $.ajax({
-            url: 'index.php?route=user/user.autocomplete&user_token={{ user_token }}&filter_email=' + encodeURIComponent(request),
-            dataType: 'json',
-            success: function(json) {
-                response($.map(json, function(item) {
-                    return {
-                        label: item['email'],
-                        value: item['user_id']
-                    }
-                }));
-            }
-        });
-    },
-    'select': function(item) {
-        $('#input-email').val(decodeHTMLEntities(item['label']));
-    }
-});
-//--></script>
+<script src="view/javascript/user.js" type="text/javascript"></script>
 {{ footer }}
