--- a/upload/admin/view/template/user/user_form.twig
+++ b/upload/admin/view/template/user/user_form.twig
@@ -125,56 +125,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#authorize').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#authorize').load(this.href);
-});
-
-$('#authorize').on('click', 'a', function(e) {
-    e.preventDefault();
-
-    var element = this;
-
-    if (confirm('{{ text_confirm }}')) {
-        $.ajax({
-            url: $(element).attr('href'),
-            dataType: 'json',
-            beforeSend: function() {
-                $(element).prop('disabled', true);
-            },
-            complete: function() {
-                $(element).prop('disabled', false);
-            },
-            success: function(json) {
-                $('.alert-dismissible').remove();
-
-                if (json['redirect']) {
-                    location = json['redirect'];
-                }
-
-                if (json['error']) {
-                    $('#alert').prepend('<div class="alert alert-danger alert-dismissible"><i class="fa-solid fa-circle-exclamation"></i> ' + json['error'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
-                }
-
-                if (json['success']) {
-                    $('#alert').prepend('<div class="alert alert-success alert-dismissible"><i class="fa-solid fa-check-circle"></i> ' + json['success'] + ' <button type="button" class="btn-close" data-bs-dismiss="alert"></button></div>');
-
-                    $('#authorize').load('index.php?route=user/user.authorize&user_token={{ user_token }}&user_id={{ user_id }}');
-                }
-            },
-            error: function(xhr, ajaxOptions, thrownError) {
-                console.log(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-            }
-        });
-    }
-});
-
-$('#login').on('click', '.pagination a', function(e) {
-    e.preventDefault();
-
-    $('#login').load(this.href);
-});
-//--></script>
+<script src="view/javascript/user.js" type="text/javascript"></script>
 {{ footer }} 
