--- a/upload/admin/view/template/user/user_group.twig
+++ b/upload/admin/view/template/user/user_group.twig
@@ -20,11 +20,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-//--></script>
+<script src="view/javascript/user.js" type="text/javascript"></script>
 {{ footer }}
