--- a/upload/admin/view/template/user/user_group_form.twig
+++ b/upload/admin/view/template/user/user_group_form.twig
@@ -91,12 +91,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('table tbody label').on('click', function() {
-    var checked = $(this).parent().parent().find(':checkbox:first').prop('checked');
-
-    $(this).parent().parent().find(':checkbox').prop('checked', !checked);
-    $(this).parent().parent().find(':checkbox').prop('checked', !checked);
-});
-//--></script>
+<script src="view/javascript/user.js" type="text/javascript"></script>
 {{ footer }}
