--- a/upload/admin/view/template/localisation/country.twig
+++ b/upload/admin/view/template/localisation/country.twig
@@ -85,21 +85,5 @@
     </div>
   </div>
 </div>
-<script type="text/javascript"><!--
-$('#list').on('click', 'thead a, .pagination a', function(e) {
-    e.preventDefault();
-
-    $('#list').load(this.href);
-});
-
-$('#form-filter').on('submit', function(e) {
-    e.preventDefault();
-
-    let url = $(this).serialize();
-
-    window.history.pushState({}, null, 'index.php?route=localisation/country&user_token={{ user_token }}&' + url);
-
-    $('#list').load('index.php?route=localisation/country.list&user_token={{ user_token }}&' + url);
-});
-//--></script>
+<script type="text/javascript" src="view/javascript/country.js"></script>
 {{ footer }}
